--- a/src/HelloWorld/MainPage.xaml
+++ b/src/HelloWorld/MainPage.xaml
@@ -5,6 +5,7 @@
              xmlns:viewModels="clr-namespace:HelloWorld.ViewModels;assembly=HelloWorld"
              xmlns:models="clr-namespace:HelloWorld.Models"
              x:DataType="viewModels:MainPageViewModel"
+         
             >
 
 
@@ -20,13 +21,15 @@
         </VerticalStackLayout>
     </ScrollView>-->
 
-
     <Grid >
         <Grid.RowDefinitions>
-            <RowDefinition Height="*" ></RowDefinition> <!--你有多少占多少-->
-            <RowDefinition Height="Auto"></RowDefinition><!--我有多少占多少-->
+            <RowDefinition Height="*" ></RowDefinition>
+            <!--你有多少占多少-->
+            <RowDefinition Height="Auto"></RowDefinition>
+            <!--我有多少占多少-->
+            <RowDefinition Height="Auto"></RowDefinition>
         </Grid.RowDefinitions>
-   
+
         <Grid.ColumnDefinitions>
 
             <ColumnDefinition Width="*"></ColumnDefinition>
@@ -34,14 +37,18 @@
             <ColumnDefinition Width="*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
         <CollectionView>
-            
+
         </CollectionView>
-        <ListView Grid.Row="0" Grid.Column="0"   Grid.RowSpan="3" ItemsSource="{ Binding  Poetries}">
+        <ListView Grid.Row="0" Grid.Column="0"   Grid.RowSpan="3" ItemsSource="{ Binding   Poetries}">
             <ListView.ItemTemplate >
                 <DataTemplate x:DataType="models:Poetry">
+                    
                     <ViewCell >
 
-                        <Label  Text="{Binding Content}"  ></Label>
+                        <VerticalStackLayout>
+                            <Label   Text="{Binding Id}"></Label>
+                            <Label   Text="{Binding Content}"></Label>
+                        </VerticalStackLayout>
 
                     </ViewCell>
                 </DataTemplate>
@@ -49,7 +56,9 @@
         </ListView>
         <Button Grid.Row="1" Grid.Column="0" Text="Initialize" Command="{Binding InitializeCommand}"></Button>
         <Button Grid.Row="1" Grid.Column="1" Text="Add" Command="{Binding AddCommand}"></Button>
-        <Button Grid.Row="1" Grid.Column="2" Text="List" Command="{Binding ListCommand}"></Button>
+        <Button Grid.Row="1" Grid.Column="2" Text="List" Command="{Binding  ListCommand}"></Button>
+        <Label Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3" Text="{Binding Json}"></Label>
+        <Button Grid.Row="2" Grid.Column="2" Text="LoadJson" Command="{Binding LoadJsonCommand}"></Button>
     </Grid>
-  
+
 </ContentPage>
