--- a/src/MyTask/DetailPage.xaml
+++ b/src/MyTask/DetailPage.xaml
@@ -2,11 +2,14 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MyTask.DetailPage"
+              xmlns:viewModels="clr-namespace:MyTask.ViewModels"
+ x:DataType="viewModels:DetailViewModel"
              Title="DetailPage">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
+    <StackLayout Padding="30">
+        <Label   FontSize="25"
+            Text="{Binding Text }"
             VerticalOptions="Center" 
             HorizontalOptions="Center" />
-    </VerticalStackLayout>
+        <Button Text="Go Back" Command="{ Binding  GetBackCommand}"></Button>
+    </StackLayout>
 </ContentPage>
