--- a/src/MAUIBlazorHybrid/MauiPages/MauiPopupPage.xaml
+++ b/src/MAUIBlazorHybrid/MauiPages/MauiPopupPage.xaml
@@ -2,22 +2,22 @@
 <mct:Popup xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:mct="clr-namespace:CommunityToolkit.Maui.Views;assembly=CommunityToolkit.Maui"
-             xmlns:zxing="clr-namespace:ZXing.Net.Maui.Controls;assembly=ZXing.Net.MAUI"
-             xmlns:zxingoptions="clr-namespace:ZXing.Net.Maui;assembly=ZXing.Net.MAUI"
-             x:Class="MAUIBlazorHybrid.MauiPages.MauiPopupPage">
-    <VerticalStackLayout>
-        <zxing:CameraBarcodeReaderView 
-        x:Name="scanner" 
-        IsDetecting="True"
-        BarcodesDetected="scanner_BarcodesDetected"  IsTorchOn="True"
-          	WidthRequest="300"
-			HeightRequest="300"  >
-        <!--<zxing:CameraBarcodeReaderView.Options >
-                <zxingoptions:BarcodeReaderOptions AutoRotate="True"   />
-
-        </zxing:CameraBarcodeReaderView.Options>-->
             
-      </zxing:CameraBarcodeReaderView>
-        <Button Padding="10" Clicked="ReturnToBlazor_Clicked" Text="返回"></Button>
-    </VerticalStackLayout>
+             xmlns:cv="clr-namespace:Camera.MAUI;assembly=Camera.MAUI"
+             x:Class="MAUIBlazorHybrid.MauiPages.MauiPopupPage">
+    <ScrollView>
+        <VerticalStackLayout
+            Spacing="25"
+            Padding="30,0"
+          >
+
+            <cv:CameraView x:Name="cameraView" WidthRequest="200" HeightRequest="200"
+                           CamerasLoaded="cameraView_CamerasLoaded"/>
+
+            <Button Text="Smile!" Clicked="Button_Clicked" />
+
+            <Image x:Name="myImage" WidthRequest="200" HeightRequest="200" />
+
+        </VerticalStackLayout>
+    </ScrollView>
 </mct:Popup>
