--- a/src/Maui.Platform/MainPage.xaml
+++ b/src/Maui.Platform/MainPage.xaml
@@ -4,12 +4,13 @@
              x:Class="Maui.Platform.MainPage">
 
 
-    <Grid Padding="10" ColumnSpacing="5">
+    <Grid Padding="5" ColumnSpacing="5"  RowSpacing="5">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" ></RowDefinition>
             
             <RowDefinition Height="Auto"></RowDefinition>
            
+            <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition Height="Auto"></RowDefinition>
         </Grid.RowDefinitions>
 
@@ -24,11 +25,15 @@
         <Label VerticalOptions="CenterAndExpand"  HorizontalOptions="CenterAndExpand" Grid.Row="0" Grid.Column="1" TextColor="Green" Text="设备" FontSize="15" FontAttributes="Bold"/>
         <Label VerticalOptions="CenterAndExpand"  HorizontalOptions="CenterAndExpand" Grid.Row="0" Grid.Column="2" TextColor="Green" Text="存储" FontSize="15" FontAttributes="Bold"/>
 
-        <Button Grid.Row="1" Grid.Column="0"  Clicked="Button_AppInfo" Text="应用信息" ></Button>
-        <Button Grid.Row="1" Grid.Column="1"  Text="浏览器" ></Button>
+        <Button Grid.Row="1" Grid.Column="0"  Text="应用信息" Clicked="Button_AppInfo"></Button>
+        <Button Grid.Row="1" Grid.Column="1"  Text="aa" ></Button>
         <Button Grid.Row="1" Grid.Column="2"  Text="Add1" ></Button>
 
-     
+        <Button Grid.Row="2" Grid.Column="0"  Text="浏览器" Clicked="BrowserOpen_Clicked" ></Button>
+
+        <Button Grid.Row="3" Grid.Column="0"  Text="启动器" Clicked="Launcher_Clicked"></Button>
+
+        <Button Grid.Row="4"  Grid.Column="0"  Text="地图与导航" Clicked="Map_Clicked"></Button>
 
     </Grid>
 
