--- a/src/Maui.Platform/MainPage.xaml
+++ b/src/Maui.Platform/MainPage.xaml
@@ -27,8 +27,12 @@
         <Label VerticalOptions="CenterAndExpand"  HorizontalOptions="CenterAndExpand" Grid.Row="0" Grid.Column="1" TextColor="Green" Text="通信" FontSize="15" FontAttributes="Bold"/>
         <Label VerticalOptions="CenterAndExpand"  HorizontalOptions="CenterAndExpand" Grid.Row="0" Grid.Column="2" TextColor="Green" Text="存储" FontSize="15" FontAttributes="Bold"/>
 
+
         <Button Grid.Row="1" Grid.Column="0"  Text="应用信息" Clicked="Button_AppInfo"></Button>
-        <Button Grid.Row="1" Grid.Column="1"  Text="设备功能"   Clicked="Contacts_Clicked"></Button>
+        
+        <Button Grid.Row="1" Grid.Column="1"  Text="电池"  Clicked="Battery_Clicked" ></Button>
+        <Button Grid.Row="2" Grid.Column="1"  Text="设备显示信息"  Clicked="DeviceDisplay_Clicked" ></Button>
+        
         <Button Grid.Row="1" Grid.Column="2"  Text="Add1" ></Button>
 
         <Button Grid.Row="2" Grid.Column="0"  Text="浏览器" Clicked="BrowserOpen_Clicked" ></Button>
