--- a/src/Maui.Platform/MainPage.xaml
+++ b/src/Maui.Platform/MainPage.xaml
@@ -18,6 +18,11 @@
             <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
         </Grid.RowDefinitions>
 
         <Grid.ColumnDefinitions>
@@ -30,8 +35,8 @@
         <Label VerticalOptions="CenterAndExpand"  HorizontalOptions="CenterAndExpand" Grid.Row="0" Grid.Column="0" TextColor="Green" Text="应用操作" FontSize="15"  FontAttributes="Bold" />
         <Label VerticalOptions="CenterAndExpand"  HorizontalOptions="CenterAndExpand" Grid.Row="0" Grid.Column="1" TextColor="Green" Text="设备功能" FontSize="15" FontAttributes="Bold"/>
         <Label VerticalOptions="CenterAndExpand"  HorizontalOptions="CenterAndExpand" Grid.Row="0" Grid.Column="2" TextColor="Green" Text="媒体" FontSize="15" FontAttributes="Bold"/>
-
-
+        <Label VerticalOptions="CenterAndExpand"  HorizontalOptions="CenterAndExpand" Grid.Row="6" Grid.Column="0" TextColor="Green" Text="共享API" FontSize="15" FontAttributes="Bold"/>
+        <Label VerticalOptions="CenterAndExpand"  HorizontalOptions="CenterAndExpand" Grid.Row="9" Grid.Column="0" TextColor="Green" Text="存储API" FontSize="15" FontAttributes="Bold"/>
         <Button Grid.Row="1" Grid.Column="0"  Text="应用信息" Clicked="Button_AppInfo"></Button>
 
         <Button Grid.Row="1" Grid.Column="1"  Text="电池"  Clicked="Battery_Clicked" ></Button>
@@ -42,10 +47,12 @@
         <Button Grid.Row="6" Grid.Column="1"  Text="地理编码信息"  Clicked="Geocoding_Clicked" ></Button>
         <Button Grid.Row="7" Grid.Column="1"  Text="地理位置信息"  Clicked="Geolocation_Clicked" ></Button>
         <Button Grid.Row="8" Grid.Column="1"  Text="触觉反馈"     Clicked="Haptic_Clicked" ></Button>
-        <Button Grid.Row="8" Grid.Column="1"  Text="振动"        Clicked="Vibration_Clicked" ></Button>
+        <Button Grid.Row="9" Grid.Column="1"  Text="振动"        Clicked="Vibration_Clicked" ></Button>
+        
         <Button Grid.Row="1" Grid.Column="2"  Text="照片和视频" Clicked="MediaPicker_Clicked" ></Button>
         <Button Grid.Row="2" Grid.Column="2"  Text="屏幕快照" Clicked="Screenshot_Clicked" ></Button>
         <Button Grid.Row="3" Grid.Column="2"  Text="文本转语音" Clicked="TextToSpeech_Clicked" ></Button>
+        <Button Grid.Row="4" Grid.Column="2"  Text="单位转换器" Clicked="UnitConverter_Clicked" ></Button>
         <Button Grid.Row="2" Grid.Column="0"  Text="浏览器" Clicked="BrowserOpen_Clicked" ></Button>
 
         <Button Grid.Row="3" Grid.Column="0"  Text="启动器" Clicked="Launcher_Clicked"></Button>
@@ -54,6 +61,9 @@
 
         <Button Grid.Row="5"  Grid.Column="0"  Text="权限" Clicked="Permissions_Clicked"></Button>
 
+        <Button Grid.Row="7"  Grid.Column="0"  Text="剪贴板" Clicked="Clipboard_Clicked"></Button>
+        <Button Grid.Row="8"  Grid.Column="0"  Text="共享" Clicked="Share_Clicked"></Button>
+        <Button Grid.Row="9"  Grid.Column="0"  Text="文件选取器" Clicked="FilePicker_Clicked"></Button>
     </Grid>
 
     <!--<StackLayout Margin="20" VerticalOptions="FillAndExpand"
