--- a/src/Maui.Platform/MainPage.xaml
+++ b/src/Maui.Platform/MainPage.xaml
@@ -71,6 +71,7 @@
         <Button Grid.Row="5"  Grid.Column="3"  Text="文件系统帮助程序" Clicked="FileSystem_Clicked"></Button>
         <Button Grid.Row="6"  Grid.Column="3"  Text="首选项" Clicked="Preferences_Clicked"></Button>
         <Button Grid.Row="7"  Grid.Column="3"  Text="保护存储" Clicked="SecureStorage_Clicked"></Button>
+        <Button SemanticProperties.Hint="aa" Grid.Row="8" Grid.Column="3" Text="本地数据" Clicked="LocalData_Clicked"></Button>
     </Grid>
 
     <!--<StackLayout Margin="20" VerticalOptions="FillAndExpand"
